<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.smallrye</groupId>
    <artifactId>smallrye-graphql-server-parent</artifactId>
    <version>2.8.2</version>
  </parent>
  <artifactId>smallrye-graphql-runner</artifactId>
  <packaging>war</packaging>
  <name>SmallRye: GraphQL Server :: Runner</name>
  <properties>
    <maven.compiler.target>11</maven.compiler.target>
    <wildfly.version>26.1.0.Final</wildfly.version>
    <failOnMissingWebXml>false</failOnMissingWebXml>
    <maven.compiler.source>11</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <dependencies>
    <dependency>
      <groupId>io.smallrye</groupId>
      <artifactId>smallrye-graphql-cdi</artifactId>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>smallrye-graphql-schema-builder</artifactId>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>smallrye-graphql-servlet</artifactId>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>smallrye-graphql-tck</artifactId>
    </dependency>
    <dependency>
      <groupId>io.smallrye.reactive</groupId>
      <artifactId>mutiny</artifactId>
    </dependency>
    <dependency>
      <groupId>io.smallrye.reactive</groupId>
      <artifactId>mutiny-smallrye-context-propagation</artifactId>
    </dependency>
    <dependency>
      <groupId>io.smallrye</groupId>
      <artifactId>smallrye-context-propagation</artifactId>
    </dependency>
    <dependency>
      <groupId>io.smallrye.config</groupId>
      <artifactId>smallrye-config</artifactId>
    </dependency>
    <dependency>
      <groupId>io.reactivex.rxjava2</groupId>
      <artifactId>rxjava</artifactId>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>smallrye-graphql-ui-graphiql</artifactId>
      <scope>runtime</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.wildfly</groupId>
                  <artifactId>wildfly-preview-dist</artifactId>
                  <version>${wildfly.version}</version>
                  <type>zip</type>
                  <overWrite>false</overWrite>
                  <outputDirectory>${project.build.directory}</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>io.smallrye</groupId>
                  <artifactId>smallrye-graphql-servlet</artifactId>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/classes</outputDirectory>
                  <excludes>**/tests/,**/dynamic/,**/*Test.class,**/beans.xml</excludes>
                </artifactItem>
                <artifactItem>
                  <groupId>org.eclipse.microprofile.graphql</groupId>
                  <artifactId>microprofile-graphql-tck</artifactId>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/classes</outputDirectory>
                  <excludes>**/tests/,**/dynamic/,**/*Test.class,**/beans.xml</excludes>
                </artifactItem>
                <artifactItem>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>smallrye-graphql-tck</artifactId>
                  <type>test-jar</type>
                  <classifier>tests</classifier>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/classes</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.mongodb</groupId>
                  <artifactId>bson</artifactId>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/classes</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.wildfly.plugins</groupId>
        <artifactId>wildfly-maven-plugin</artifactId>
        <version>4.1.1.Final</version>
        <configuration>
          <jbossHome>${project.build.directory}/wildfly-preview-${wildfly.version}</jbossHome>
          <server-config>standalone-microprofile.xml</server-config>
          <systemProperties>
            <jboss.tx.node.id>1</jboss.tx.node.id>
          </systemProperties>
          <add-user>
            <users>
              <user>
                <username>admin</username>
                <password>admin</password>
                <groups>
                  <group>admin</group>
                </groups>
              </user>
            </users>
          </add-user>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
